vivi.core changes
=================

4.57.4 (unreleased)
-------------------

- OPS-2024: Handles invalid variant size


4.57.3 (2021-07-05)
-------------------

- BUG-1415: Be more defensive during BC video import

- TOPIC-9: Store topicpage_order abstracted from the concrete TMS fieldnames


4.57.2 (2021-06-30)
-------------------

- FIX: Hide Topicpage sort option when anything else is selected


4.57.1 (2021-06-30)
-------------------

- ZON-6710: Changes topicbox default automatic_type value


4.57.0 (2021-06-29)
-------------------

- ZON-5970: Remove clickcounter integration

- OPS-1985: Use opentelemetry for tracing


4.56.0 (2021-06-28)
-------------------

- TOPIC-9: Provide access to TMS kpi data with `IKPI` adapter


4.55.0 (2021-06-23)
-------------------

- TOPIC-9: Add possibility to sort TMS entries
- TOPIC-9: Add related topics as automatic source

- ZON-6655: Improve wording


4.54.2 (2021-06-21)
-------------------

- OPS-2001: Restrict "change type" to producing+cvd


4.54.1 (2021-06-16)
-------------------

- BEM-54: Be defensive about analyzing the BC response


4.54.0 (2021-06-16)
-------------------

- OPS-1984: Conform to real `Span` API in FakeTracer


4.53.3 (2021-06-07)
-------------------

- BEM-54: Improve Error-Logging for not playable videos


4.53.2 (2021-06-03)
-------------------

- MAINT: Use own converter for RecipeArticles
- OPS-1852: Markdown modules must not be empty

- ZON-6539: remove option for editors to include articles in daily newsletter


4.53.1 (2021-05-31)
-------------------

- STO-185: Handle indeterminable mtime gracefully


4.53.0 (2021-05-27)
-------------------

- ZON-6655: Fix related API, support multiple topicboxes per article

- OPS-1892: Add sample_rate parameter to honeycomb tracer


4.52.2 (2021-05-18)
-------------------

- BUG-1392: Avoid PIL resize with 0 values

- OPS-1359: Conform to field naming scheme for tracing


4.52.1 (2021-04-29)
-------------------
